# aep-cloud-ml-ecosystem

./: .gitignore  README.md  Week3Notebook_datarobot.ipynb  Week4Notebook_datarobot.ipynb  pyproject.toml
conf/: config.ini
notebooks/: 0_Generate_synthetic_data.ipynb  1_Explore_data_and_engineer_features.ipynb  2_Export_training_data.ipynb  3_Train_a_propensity_model.ipynb  4_Get_propensity_scores_from_model.ipynb  EDA_Featurization.ipynb  SyntheticData.ipynb  TrustGovernance.ipynb
notebooks/DataRobot/: Week4Notebook_datarobot.ipynb
notebooks/assignments/: Week1Notebook.ipynb  Week2Notebook.ipynb  Week3Notebook.ipynb  Week3Notebook_sagemaker.ipynb  Week4Notebook.ipynb  Week5Notebook.ipynb
notebooks/aws_sagemaker/: README.md  Week1Notebook_sagemaker.ipynb  Week2Notebook_sagemaker.ipynb  Week3Notebook_sagemaker.ipynb  Week4Notebook_sagemaker.ipynb
notebooks/databricks/: CommonInclude.py  Introduction.py  RunMe.py  SimulationHelpers.py  Week1Notebook.py  Week2Notebook.py  Week3Notebook.py  Week4Notebook.py  Week5Notebook.py  Week6Notebook.py
notebooks/datarobot/: Week1Notebook_datarobot.ipynb  Week2Notebook_datarobot.ipynb  Week3Notebook_datarobot.ipynb  Week4Notebook_datarobot.ipynb  Week5Notebook_datarobot.ipynb
notebooks/end-to-end/: EndToEnd-Pipeline-Databricks.ipynb
notebooks/experiments/: AEPDatasetCreation-ScalaSpark.dbc  FeaturizeDatasets.ipynb  PQSExploration.ipynb  Part1-Data-Exploration-QueryService.ipynb  Part2-Creating-Featurized-Datasets.ipynb  Part3-MLModelTraining.ipynb  XDMDataGeneration.ipynb
notebooks/watsonx/: README.md  (+3 more)
(+18 files in other folders)
