[tool.poetry]
name = "cme"
version = "0.1.0"
description = "The cmle ecosystem library associated with common functions in the notebook"
authors = ["cmle dev team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.5"
pandas = "^1.5.3"
numpy = "^1.24.1"
pytest = "^7.2.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
